masterbranch conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2017 Git.Training
 Adding changes before rebasing conflicts
 -->
 <head>
-	<title>A great website</title>
+	<title>silly text</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ Adding changes before rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			text to verify merge conflicts
+			some more text to verify merge conflicts
 	</main>
 	<footer class="container">
 		<p>&copy; GIT Training 2017</p>
