Adding changes after rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 Copyright 2017 Git.Training
+added some text
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
