Local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@ added some text
 			some more text to verify merge conflicts
 	</main>
 	<footer class="container">
-		<p>&copy; GIT Training 2017</p>
+		<p>&copy; Monika Gupta</p>
 	</footer>
 </body>
 </html>
