Done with simple.html changes

--- a/simple.html
+++ b/simple.html
@@ -4,6 +4,7 @@ Copyright 2017 Git.Training
 added some text
 -->
 <head>
+<title>Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +18,7 @@ added some text
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some more text to verify merge conflicts
+			some more text to verify stash example 
 	</main>
 	<footer class="container">
 		<p>&copy; Monika Gupta</p>
