changes after git stash brnach command

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2017 Git.Training
 added some text
 -->
 <head>
-<title>Updating title for stash example</title>
+<title>Updating title for stash example on branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
